# halobar

./: .gitignore  Cargo.toml  README.md  halobar_old
archive/network_manager/: listener.rs  mod.rs  network.rs  props.rs  proxy_functions.rs  speed.rs  variants.rs
archive/network_manager/xmlgen/: access_point.rs  active_connection.rs  network_manager.rs
halobar_config/: Cargo.toml
halobar_config/src/: config_struct.rs  lib.rs  macro.rs  test.rs
halobar_config/src/fmt/: error.rs  halotype.rs  mod.rs  parse.rs  parser.rs
halobar_core/: Cargo.toml
halobar_fmt/: Cargo.toml
halobar_fmt/src/: error.rs  lib.rs  parse.rs
halogen/: Cargo.toml
halogen/src/: complete.rs  error.rs  halobar_integration.rs  imports.rs  interface.rs  json.rs  lib.rs  server.rs
halogen/src/v1/: mod.rs  variants.rs
src/: backend.rs  client.rs  globals.rs  logging.rs  main.rs  modules.rs  runtime.rs  to_frontend.rs  types.rs
src/modules/: network.rs  time.rs
src/modules/command/: mod.rs
src/modules/neli/: mod.rs
src/modules/net/: mod.rs
src/modules/network/: access_point.rs  active_connection.rs  chosen.rs  device.rs  network_manager.rs  variants.rs
src/modules/network/unused/: network.rs
src/modules/network/xmlgen/: access_point.rs  active_connection.rs  device.rs  mod.rs  network_manager.rs  settings.rs
src/modules/network_manager/: data_functions.rs  listener.rs  mod.rs  props.rs  proxy_functions.rs  speed.rs  variants.rs
src/modules/network_manager/neli/: props.rs
src/modules/network_manager/xmlgen/: device.rs  mod.rs  wireless_device.rs
src/modules/time/: mod.rs
src/modules/upower/: mod.rs  types.rs  xmlgen_display_device.rs
src/modules/upower/xmlgen/: display_device.rs  keyboard.rs  mod.rs  upower.rs
src/prelude/: imports.rs  mod.rs
src/types/: bichannel.rs  config_flags.rs  display_output.rs  event.rs  format_state.rs  internal_error.rs  mod.rs  module_id.rs  zbus_connection.rs
