[package]
name = "halobar"
readme = "README.md"
description = "A rusty, ice-cold statusbar for Wayland"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
members = ["halobar_core"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-only"
repository = "https://github.com/REALERvolker1/halobar"
keywords = ["hyprland", "layer-shell", "gui", "wayland", "linux"]
categories = ["GUI", "Asynchronous"]
authors = ["volker1 <73304952+REALERvolker1@users.noreply.github.com>"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[dependencies]
monoio = { version = "0.2.3", features = ["once_cell", "signal", "sync", "tracing", "threadpool", "zero-copy", "flume"] }
once_cell = { version = "1.19.0", features = ["parking_lot"] }
