[package]
name = "halobar"
readme = "README.md"
description = "A rusty, ice-cold statusbar for Wayland"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace]
members = ["halobar_config", "halobar_core", "halogen"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "AGPL-3.0-only"
repository = "https://github.com/REALERvolker1/halobar"
keywords = ["hyprland", "layer-shell", "gui", "wayland", "linux"]
categories = ["GUI", "Asynchronous"]
authors = ["volker1 <73304952+REALERvolker1@users.noreply.github.com>"]

[profile.release]
lto = true
strip = true
codegen-units = 1

[workspace.dependencies]

# iced = { git = "https://github.com/pop-os/iced", version = "0.12.0", features = [
#     "tokio",
#     "lazy",
#     "image",
#     "multi-window",
#     "palette",
#     "svg",
#     "wayland",
#     "wgpu",
#     "advanced",
# ] }

strum = { version = "0.26.2", features = ["phf"] }
strum_macros = "0.26.2"
paste = "1.0.14"
konst = { version = "0.3.8", features = ["rust_latest_stable"] }
smart-default = "0.7.1"
const_format = { version = "0.2.32", features = ["rust_1_64"] }
thiserror = "1.0.59"
derive_more = { version = "0.99.17", default-features = false, features = [
    "try_into",
    "unwrap",
    "from_str",
    "from",
    "display",
    "deref",
    "as_ref",
    "deref_mut",
    "as_mut",
    "index",
    "index_mut",
    "into",
    "iterator",
    "into_iterator",
    "error",
] }

color-eyre = { version = "0.6.3", features = [
    "capture-spantrace",
    "track-caller",
], default-features = false }
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "parking_lot",
    "once_cell",
] }
tracing-appender = { version = "0.2.3", features = ["parking_lot"] }

smallvec = { version = "1.13.2", features = ["serde", "const_new"] }
once_cell = { version = "1.19.0", features = ["parking_lot"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde", "zerocopy"] }
regex = "1.10.4"
ahash = { version = "0.8.11", features = [
    "serde",
    "no-rng",
    "std",
], default-features = false }
serde = { version = "1.0.197", features = ["rc", "derive"] }
nix = { version = "0.28.0", features = ["fs", "user", "hostname", "net"] }
chrono = { version = "0.4.38", default-features = false, features = [
    "std",
    "clock",
] }
size = "0.4.1"

futures-util = "0.3.30"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
tokio = { version = "1.37.0", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "io-std",
    "parking_lot",
    "process",
    "signal",
    "socket2",
    "sync",
    "time",
    "tracing",
    "test-util",
    "net",
] }
zbus = { git = "https://github.com/dbus2/zbus", version = "4.1.2", default-features = false, features = [
    "tokio",
] }

toml_edit = { version = "0.22.9", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
# shellexpand = { version = "3.1.0", features = ["full"] }

halobar_core = { path = "halobar_core" }
halobar_config = { path = "halobar_config" }
halogen = { path = "halogen" }

[dependencies]
ahash = { workspace = true }
const_format = { workspace = true }
derive_more = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
konst = { workspace = true }
once_cell = { workspace = true }
futures-util = { workspace = true }
# iced = { workspace = true }
paste = { workspace = true }
regex = { workspace = true }
smart-default = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
color-eyre = { workspace = true }
tracing-error = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }

halobar_core = { workspace = true }
halobar_config = { workspace = true }
halogen = { workspace = true, features = ["bin", "complete"] }
zbus = { workspace = true }
flume = { workspace = true }
# sysinfo = { workspace = true }
size = { workspace = true }
serde_repr = "0.1.19"
bitflags = { version = "2.5.0", features = ["std"] }


# monoio = { version = "0.2.3", features = [
#     "zero-copy",
#     "flume",
#     "once_cell",
#     "signal",
#     "threadpool",
#     "tracing",
# ] }
