[package]
name = "halobar_config"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
paste = { workspace = true }
