[package]
name = "halogen"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bin"

[dependencies]
ahash = { version = "0.8", features = [
    "serde",
    "no-rng",
    "std",
], default-features = false }
tokio = { version = "1.37", features = [
    "macros",
    "io-std",
    "socket2",
    "sync",
    "test-util",
    "net",
] }

tracing = { version = "0.1", features = ["async-await"], optional = true }
serde = { version = "1", features = ["derive"] }
once_cell = { version = "1.19" }
futures-util = { version = "0.3", default-features = false, features = [
    "async-await",
    "std",
] }
serde_json = { version = "1.0", optional = true }
simd-json = { version = "0.13", optional = true, features = ["known-key"] }
tracing-subscriber = { version = "0.3.18", features = [
    "once_cell",
], optional = true }
flume = { version = "0.11.0", default-features = false, features = ["async"] }

[features]
default = ["tracing", "simd-json", "bin"]

bin = ["tracing", "simd-json", "parking_lot", "dep:tracing-subscriber"]

tracing = ["dep:tracing", "tokio/tracing"]
parking_lot = [
    "once_cell/parking_lot",
    "tokio/parking_lot",
    "tracing-subscriber?/parking_lot",
]

serde_json = ["dep:serde_json"]
simd-json = ["dep:simd-json"]
