[package]
name = "halogen"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "halogen"
required-features = ["bin"]

[dependencies]
ahash = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
color-eyre = { workspace = true, optional = true }
tracing-error = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
flume = { workspace = true }
futures-util = { workspace = true }
clap = { workspace = true, optional = true }
shellexpand = { workspace = true, optional = true }
smallvec = { workspace = true }
derive_more = { workspace = true }

serde_json = { version = "1.0", optional = true }
simd-json = { version = "0.13", optional = true, features = ["known-key"] }

[features]
default = ["simd-json"]

bin = [
    "dep:tracing-subscriber",
    "dep:tracing-error",
    "dep:tracing-appender",
    "dep:color-eyre",
    "dep:clap",
    "dep:shellexpand",
]

serde_json = ["dep:serde_json"]
simd-json = ["dep:simd-json"]
