[package]
name = "halogen"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "halogen"
required-features = ["bin"]

[dependencies]
ahash = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
flume = { workspace = true }
futures-util = { workspace = true }
smallvec = { workspace = true }
derive_more = { workspace = true }

once_cell = { workspace = true, optional = true }
color-eyre = { workspace = true, optional = true }
tracing-error = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

serde_json = { version = "1.0", optional = true }
simd-json = { version = "0.13", optional = true, features = ["known-key"] }

[features]
default = ["simd-json"]

# This isn't so much integration with halobar as it is just a few shared functions and enums
bin = ["complete"]

serde_json = ["dep:serde_json"]
simd-json = ["dep:simd-json"]

complete = [
    "dep:tracing-subscriber",
    "dep:tracing-error",
    "dep:tracing-appender",
    "dep:color-eyre",
    "dep:clap",
    "dep:once_cell",
    "dep:strum",
    "dep:strum_macros",
]
